使用全局单例调度器模型